# balabank-ai

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/routers/: ask.py  health.py
app/services/: llm.py  search.py  server_embedder.py
